fix: fixed pixel jump on wallpaper settings page

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -812,7 +812,6 @@ body {
    display: flex;
    align-items: center;
    justify-content: space-between;
-   flex-wrap: wrap;
    margin: 0 20px;
    padding: 0 2px;
    border-bottom: 1px solid rgba(68, 68, 68, 0.445);
@@ -821,8 +820,9 @@ body {
 } 
 
 .settings-item-wrapper {
+   flex-shrink: 0;
    display: flex;
-   flex: 1 0 100%;
+   width: 100%;
    height: 50px;
    align-items: center;
    justify-content: space-between;
